fix separators on mobile

--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -174,6 +174,8 @@ code {
 	}
 
 	@include media("<tablet", "screen") {
+		box-sizing: content-box;
+		padding-right: 0;
 		ul {
 			margin: 0;
 			padding: 0;
